# seqpp

./: CMakeLists.txt  consumer.h  jack_client.h  jack_consumer.h  jack_midi_consumer.h  main.cc  midi_event.h  pattern.lua  ringbuffer.h  seq.lua  seqpp.i  test_jack_midi_consumer.lua
lua/: CMakeLists.txt
python/: CMakeLists.txt
seqpp/: consumer.h  event.h  gc.h  jack_client.h  jack_consumer.h  jack_midi_consumer.h  midi_event.h  ringbuffer.h
